<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_coordinator_layout"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/main_top_app_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/app_name" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".MainActivity"
            tools:showIn="@layout/activity_main">

            <TextView
                style="?attr/textAppearanceDisplaySmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trending_title"
                android:textColor="?attr/colorPrimary"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/time_window_toggle_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:checkedButton="@id/btn_time_window_week"
                app:selectionRequired="true"
                app:singleSelection="true">

                <Button
                    android:id="@+id/btn_time_window_week"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_window_week" />

                <Button
                    android:id="@+id/btn_time_window_day"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_window_day" />
            </com.google.android.material.button.MaterialButtonToggleGroup>

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_trending"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_trending"
                tools:orientation="horizontal" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <TextView
                style="?attr/textAppearanceTitleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popular_title"
                android:textColor="?attr/colorPrimary"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_popular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:orientation="horizontal"
                tools:itemCount="4"
                tools:listitem="@layout/item_popular"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>